--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #383e42;
+    background-color: #515354;
     z-index: 2000;
     width: 100%;
     height: 130px;
@@ -222,11 +222,11 @@ nav a:hover::after
     box-sizing: border-box;
     width: 100%; /* Kartların genişliğini ayarlar */
     background-color: whitesmoke; /* Kart arka plan rengi */
-    border-radius: 8px; /* Kart kenar yuvarlaklığı */
+    border-radius: 25px; /* Kart kenar yuvarlaklığı */
     overflow: hidden; /* İçeriklerin kartın sınırları içinde kalmasını sağlar */
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Kartın gölgesi */
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.1); /* Kartın gölgesi */
     margin-bottom: 20px; 
-    border: 3px solid rgb(0, 90, 20);
+    border: 4px ;
 }
 .inner-services .services-images img {
     width: 100%;
@@ -259,6 +259,10 @@ nav a:hover::after
     background-size: cover;
     background-position: center;
     
+    
+}
+.main-inner:hover{
+    transform: translateY(-5px);
 }
 .why-us-heading{
     text-align: center;
@@ -281,8 +285,11 @@ nav a:hover::after
 .main-inner{
     flex: 0 0 calc(33% - 1rem);
     padding: 2rem 1rem;
-    border: 3px solid rgb(0, 90, 20);
-
+    border: 4px ;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+   
+    
 }
 .icon-text-main{
     display: flex;
@@ -293,6 +300,7 @@ nav a:hover::after
 
 .inner-content{
     padding: 0 0.5rem;
+    margin-top: 8px;
 
 }
 
@@ -319,7 +327,7 @@ nav a:hover::after
 .footer {
     padding: 1rem 7%;
     width: 100%;
-    background-color: #383e42; 
+    background-color: #515354; 
     border: 2px solid rgb(0, 90, 20);
 }
 
@@ -361,10 +369,10 @@ nav a:hover::after
 
 .about-card {
     max-width: 400px;
-    border: 3px solid rgb(0, 90, 20);
+    border: 4px ;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
     margin-top: 150px;
     background-color: whitesmoke;
@@ -401,10 +409,10 @@ nav a:hover::after
 .kurucu-card {
     max-width: 400px;
     background-color: whitesmoke;
-    border: 3px solid rgb(0, 90, 20);
+    border: 4px ;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -501,11 +509,11 @@ nav a:hover::after
     box-sizing: border-box;
     width: 100%; /* Kartların genişliğini ayarlar */
     background-color: whitesmoke; /* Kart arka plan rengi */
-    border-radius: 15px; /* Kart kenar yuvarlaklığı */
+    border-radius: 25px; /* Kart kenar yuvarlaklığı */
     overflow: hidden; /* İçeriklerin kartın sınırları içinde kalmasını sağlar */
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); /* Kartın gölgesi */
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.1); /* Kartın gölgesi */
     margin-bottom: 20px; 
-    border: 3px solid  rgb(0, 90, 20);
+    border: 4px ;
 }
 
 .feature-image img{
@@ -567,9 +575,10 @@ nav a:hover::after
     width: 500px;
     padding: 20px;
     border-radius: 15px;
-    box-shadow: 0 10px 18px rgba(0, 0, 0, 0.1); /* Gölgelendirme efekti */
+    box-shadow: 0 15px 24px rgba(0, 0, 0, 0.1); /* Gölgelendirme efekti */
     height: auto;
-    border: 3px solid   rgb(0, 90, 20);
+    border: 4px ;
+    
 }
 
 .contact-info {
@@ -581,13 +590,13 @@ nav a:hover::after
 
 .contact-info h2 {
     margin-bottom: 10px;
-    color: #383e42;
+    color: #515354;
     font-size: 21px;
 }
 
 .contact-info p {
     margin: 0;
-    color: #383e42;
+    color: #515354;
     font-size: 19px;
 }
 
@@ -600,7 +609,7 @@ nav a:hover::after
 .contact-info ul li {
     margin-right: 5px; /* Öğeler arasında boşluk bırak */
     margin-bottom: 5px;
-    color: #555;
+    color: #515354;
     font-size: 18px;
     padding-right: 15px;
 }
@@ -617,7 +626,7 @@ nav a:hover::after
 
 .contact-form h2 {
     margin-bottom: 10px;
-    color: #333;
+    color: #515354;
     font-size: 20px;
 }
 
@@ -712,7 +721,7 @@ nav a:hover::after
     nav{
         position: absolute;
         top: 100%;
-        background-color: #383e42;
+        background-color: #515354;
         width: 30rem;
         right: -3000px;
         height: 100vh;
@@ -723,7 +732,7 @@ nav a:hover::after
         padding: 1rem;
         margin: 1rem;
         background-color: white;
-        color: var(--heading-color);
+        color: #515354;
         border: 3px solid  rgb(0, 90, 20);
     }
     .main-inner {
