--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ nav a:hover::after
     display: flex;
     flex-direction: column; /* İçerikleri dikey yönde sırala */
     align-items: center; /* İçerikleri yatayda merkezle */
-    padding-top: 130px;
+    padding-top: 120px;
     margin-bottom: 30px;
     width: 100%;
 }
@@ -705,6 +705,7 @@ nav a:hover::after
     }
     header .logo img {
         margin-left: -10px;
+        width: 130px;
     }
     .home {
         padding-top: 130px; /* Önerilen değerlerle değiştirebilirsiniz */
@@ -763,7 +764,7 @@ nav a:hover::after
         gap: 40px;
         padding: 5rem;
         border: 4px ;
-        height: 40vh;
+        height: 50%;
     }
     .inner-content-text p{
         color:  rgb(0, 90, 20);
@@ -813,7 +814,7 @@ nav a:hover::after
 
     .our-featured {
         padding-top: 170px; /* Sayfanın üst kısmında 100 piksel boşluk bırak */
-       
+        
         display: flex;
         flex-direction: column;
         align-items: center;
