--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
 
 
 }
+body{
+    background: linear-gradient(to bottom, rgb(214, 214, 214), grey);
+}
 
 html{
 
@@ -38,7 +41,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #515354;
+    background: linear-gradient(to bottom, rgb(214, 214, 214), grey);
     z-index: 2000;
     width: 100%;
     height: 130px;
@@ -131,61 +134,6 @@ nav a:hover::after
     transition: 0.5s;
 }
 
-/* .home{
-    padding-top: 130px;
-    position: relative;
-    height: 50%;
-}
-
-
-.mySwiper{
-    width: 100%;
-    max-height: 592px;
-    
-    
-}
-
-.swiper-slide img{
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    
-}
-.swiper-button-next,
-.swiper-button-prev {
-    position: absolute;
-    top: 50%;
-    transform: translateY(100%);
-}
-
-.swiper-pagination-bullet {
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    line-height: 30px;
-    font-size: 12px;
-    color: #000;
-    opacity: 1;
-    background: rgba(0, 0, 0, 0.2);
-  } */
-
-/* .sldier-button a{
-    padding: 1.2rem 2rem;
-    color: white;
-    background-color: var(--primar-color);
-    border-radius: 10px;
-    font-size: 1.5rem;
-    transition: 1s;
-    margin: 0.5rem;
-
-
-}
-
-.slider-button a:hover{
-    background-color: white;
-    color: var(--navbar-color);
-} */
 
 .our-services{
     padding: 2rem 7%;
@@ -257,7 +205,7 @@ nav a:hover::after
 }
 .why-us{
     
-    background-color: whitesmoke;
+    background-color: white;
     width: 100%;
     padding: 4rem 5%;
     background-repeat: no-repeat;
@@ -297,6 +245,7 @@ nav a:hover::after
     border-radius: 25px;
     width: 200px;
     height: 200px;
+    background-color: whitesmoke;
    
     
 }
@@ -338,7 +287,7 @@ nav a:hover::after
 .footer {
     padding: 1rem 7%;
     width: 100%;
-    background-color: #515354; 
+    background: linear-gradient(to bottom, rgb(214, 214, 214), grey);
     border: 2px solid rgb(0, 90, 20);
 }
 
