--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@
 
 
 }
-body{
-    background: linear-gradient(to bottom, rgb(214, 214, 214), grey);
-}
 
 html{
 
@@ -41,7 +38,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(to bottom, rgb(214, 214, 214), grey);
+    background: #d3d3d3;
     z-index: 2000;
     width: 100%;
     height: 130px;
@@ -287,7 +284,7 @@ nav a:hover::after
 .footer {
     padding: 1rem 7%;
     width: 100%;
-    background: linear-gradient(to bottom, rgb(214, 214, 214), grey);
+    background: #d3d3d3;
     border: 2px solid rgb(0, 90, 20);
 }
 
